<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="entrees">Entrées</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="bienvenue">BIENVENUE sur le site de</string>
    <string name="petit">Petit Chef</string>

    <string name="liste">Liste des ingrédients : </string>
    <string name="total">Ajouter au panier: 0 €</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="attention">ATTENTION ! Merci d\'aller sur votre panier à chaque fois que vous appuyer sur "ajouter"</string>

    <string name="panier">Voici votre panier :</string>
    <string name="listePanier">Votre panier est vide.. T_T</string>
    <string name="commander">commander !</string>

    <string name="merci">Merci ! Votre commander à bien été pris en compte. Notre livreur est en chemin.</string>
    <string name="retour">Retour menu principal</string>
</resources>