<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:backgroundTint="#E3E3E3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/entrees"
        android:layout_width="181dp"
        android:layout_height="73dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/amarante"
        android:text="@string/entrees"
        android:textColor="#040404"
        android:textSize="34sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/plats"
        app:layout_constraintEnd_toEndOf="@+id/plats"
        app:layout_constraintStart_toStartOf="@+id/plats" />

    <Button
        android:id="@+id/plats"
        android:layout_width="181dp"
        android:layout_height="73dp"
        android:backgroundTint="#FFFFFF"
        android:ellipsize="none"
        android:fontFamily="@font/amarante"
        android:text="@string/plats"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997" />

    <Button
        android:id="@+id/desserts"
        android:layout_width="181dp"
        android:layout_height="73dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/amarante"
        android:text="@string/desserts"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/plats"
        app:layout_constraintStart_toStartOf="@+id/plats"
        app:layout_constraintTop_toBottomOf="@+id/plats" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302"
        app:srcCompat="@drawable/isen" />

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/bienvenue"
        android:textColor="#FF4D4D"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/nom"
        android:textColor="#FF4D4D"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

</androidx.constraintlayout.widget.ConstraintLayout>